<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="enter_first_number">Enter first number</string>
    <string name="enter_second_number">Enter second number</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="multiply">Multiply</string>
    <string name="divide">Divide</string>
    <string name="result">Result:</string>
</resources>