<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/etFirstNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_first_number"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etSecondNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etFirstNumber"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:hint="@string/enter_second_number"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etSecondNumber"
        android:layout_marginTop="16dp"
        android:text="@string/add" />

    <Button
        android:id="@+id/btnSubtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etSecondNumber"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@id/btnAdd"
        android:layout_marginStart="16dp"
        android:text="@string/subtract" />

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etSecondNumber"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@id/btnSubtract"
        android:layout_marginStart="16dp"
        android:text="@string/multiply" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etSecondNumber"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@id/btnMultiply"
        android:minWidth="30dp"
        android:text="@string/divide"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnAdd"
        android:layout_marginTop="32dp"
        android:text="@string/result"
        android:textSize="18sp" />
</RelativeLayout>
